--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "emuthreeds-externals"]
-    path = emuThreeDS/externals
-    url = https://github.com/emuplace/emuthreeds-externals
+[submodule "emuThreeDS/externals"]
+	path = emuThreeDS/externals
+	url = https://github.com/emuplace/emuthreeds-externals
