Added base CitraWrapper class, new icon and basic SwiftUI views.

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,4 @@
 [submodule "emuThreeDS/externals"]
 	path = emuThreeDS/externals
 	url = https://github.com/emuplace/emuthreeds-externals
+	branch = main
